deploy/kubernetes/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: uareviews
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
